refactor: Change the name of an image file

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -17,7 +17,7 @@
     },
     {
       "title": "Météo",
-      "imageSrc": "projects/R.png",
+      "imageSrc": "projects/extention.png",
       "description": "Weather is a Chrome browser extension featuring a search bar for specifying cities.",
       "skills": ["JavaScript", "CSS", "APINinja"],
       "demo": "",
